Добавлен прогресс, изменена структура
