# src/internal/api/become_better/add_categories.go
@@ -5,7 +5,7 @@ import (
 	"fmt"
 
 	gen "become_better/src/gen/become_better"
-	"become_better/src/internal/api/models"
+	"become_better/src/internal/models"
 
 )
 
@@ -17,10 +17,16 @@ func (s *MainService) AddCategories(ctx context.Context, newCategory *gen.AddCat
 		return nil, fmt.Errorf("category with such ID - %v doesn't exist", newCategory.MainCategory)
 	}
 
+	_, ok = models.ProgressTypesMap[newCategory.CategoryType]
+	if !ok {
+		return nil, fmt.Errorf("category type with such ID - %v doesn't exist", newCategory.CategoryType)
+	}
+
 	category := models.Category{
 		MainCategory: newCategory.MainCategory,
 		Name: newCategory.Name,
 		Description: newCategory.Description,
+		ProgressType: newCategory.CategoryType,
 	}
 	createdCategory, err := s.MainCategoriesInterface.AddCategories(ctx, s.App.Postgres.Pool, &category)
 	if err != nil {
